force-app/main/default/objects/CostCenterMerge__c/CostCenterMerge__c.object-meta.xml
<CustomObject>
    <label>Cost Center Merge</label>
    <nameField>
        <displayFormat>CCM-{YY}{MM}{DD}{000000}</displayFormat>
        <label>CostCenter Merge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Center Merge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>