force-app/main/default/objects/CostCenterMerge__c/fields/BizAttributeCode__c.field-meta.xml
<CustomField>
    <fullName>BizAttributeCode__c</fullName>
    <label>Biz Attribute Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>