force-app/main/default/objects/CostCenterMerge__c/fields/CompanyCode_AsIs__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode_AsIs__c</fullName>
    <label>As Is Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>