force-app/main/default/objects/CostCenterMerge__c/fields/IsComplete__c.field-meta.xml
<CustomField>
    <fullName>IsComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>법인통합이 완료된 경우 True, 기본값 False</description>
    <label>IsComplete</label>
    <type>Checkbox</type>
</CustomField>