force-app/main/default/objects/CostCenterMerge__c/fields/ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ItemNumber__c</fullName>
    <label>Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>