force-app/main/default/objects/CostCenterMerge__c/fields/Oppty_CodeFormat_ToBe__c.field-meta.xml
<CustomField>
    <fullName>Oppty_CodeFormat_ToBe__c</fullName>
    <description>새로 생성될 사업기회 코드 형식</description>
    <label>To-Be Opportunity Code Format</label>
    <length>1</length>
    <type>Text</type>
</CustomField>