force-app/main/default/objects/CostCenterMerge__c/fields/Oppty_SalesDept_ToBe__c.field-meta.xml
<CustomField>
    <fullName>Oppty_SalesDept_ToBe__c</fullName>
    <label>To-Be Opportunity Sales Dept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>