force-app/main/default/objects/CostCenterMerge__c/fields/OpptyCode_AsIs__c.field-meta.xml
<CustomField>
    <fullName>OpptyCode_AsIs__c</fullName>
    <label>As-Is Opportunity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>