force-app/main/default/objects/CostCenterMerge__c/fields/ProjectDescription__c.field-meta.xml
<CustomField>
    <fullName>ProjectDescription__c</fullName>
    <label>Project Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>