force-app/main/default/objects/CostCenterMerge__c/fields/Svc_DeliveryDept_ToBe__c.field-meta.xml
<CustomField>
    <fullName>Svc_DeliveryDept_ToBe__c</fullName>
    <label>To-Be Service Delivery Dept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>