force-app/main/default/objects/CostCenterMerge__c/fields/WBSDescription__c.field-meta.xml
<CustomField>
    <fullName>WBSDescription__c</fullName>
    <label>WBS Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>